# FastAPI-Clickhouse

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/api/: __init__.py  latest_data_router.py
app/core/: config.py
app/services/: history_data_service.py  latest_data_service.py
clickhouse/: Dockerfile  init.sql
crawlers/: README.md  pyproject.toml  sharpely_scrapper.py
fastapi_service/: DockerFile  README.md  pyproject.toml
fastapi_service/app/: server.py
fastapi_service/app/api/: __init__.py  health_router.py  history_data_router.py  latest_data_router.py
fastapi_service/app/connection/: clickhouse.py
fastapi_service/app/core/: constants.py
fastapi_service/app/repository/: stock_data_repository.py
fastapi_service/app/schemas/: responses.py
fastapi_service/app/services/: history_data_service.py  latest_data_service.py
ingestion_services/: Dockerfile  clickhouse_connection.py  config.py  data_ingestion.py  pyproject.toml  schema.py
