[tool.poetry]
name = "fastapi-clickhouse"
version = "0.0.1"
description = "FastAPI, Clickhouse and WebSocket"
authors = ["Narayan Prajapat <narayanprajapat00099@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
python-dotenv = "^1.1.1"
fastapi = "^0.116.1"
clickhouse-pool = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
