[tool.poetry]
name = "ingestion-services"
version = "0.0.1"
description = ""
authors = ["Narayan Prajapat <narayanprajapat00099@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.65"
clickhouse-pool = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
